buildscript {
	repositories {
		mavenCentral()
	}
	dependencies {
		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
	}
}

ext.metaJava25JvmArgs = ['-XX:+UseCompactObjectHeaders', '--enable-native-access=ALL-UNNAMED']

apply from: "$rootDir/gradle/iteration-safety.gradle"

allprojects {
	apply plugin: 'eclipse'
	apply plugin: 'idea'
	apply plugin: 'maven-publish'
	ext.appName = 'Meta'

	configurations.all {
		exclude group: "com.badlogicgames.gdx", module: "gdx-backend-lwjgl"
	}
}

// If we add android exclude the project here
configure(subprojects) {
	apply plugin: 'kotlin'

	java {
		sourceCompatibility = JavaVersion.VERSION_25
		targetCompatibility = JavaVersion.VERSION_25
		toolchain {
			languageVersion = JavaLanguageVersion.of(25)
		}
	}

	kotlin {
		jvmToolchain(25)
	}

	publishing {
		publications {
			mavenJava(MavenPublication) {
				from components.java
			}
		}
	}
}

subprojects {
	group = 'com.github.Frotty'
	version = '1.0.0-SNAPSHOT'

	repositories {
		mavenCentral {
			content {
				includeGroupByRegex "com\\.badlogicgames\\..*"
				includeGroupByRegex "org\\.jetbrains\\..*"
				includeGroup "org.jetbrains"
				includeGroup "org.slf4j"
				includeGroup "org.apache.commons"
				includeGroup "commons-io"
				includeGroup "commons-codec"
				includeGroup "org.tukaani"
				includeGroup "ch.qos.logback"
				includeGroupByRegex "org\\.junit\\..*"
				includeGroup "org.junit"
				includeGroup "org.apiguardian"
				includeGroup "org.opentest4j"
				includeGroup "org.lwjgl"
				includeGroup "org.jcraft"
				includeGroup "net.java.dev.jna"
				// required by jitpack
				includeGroup "org.sonatype.oss"
				includeGroup "org.apache"
			}
		}
		maven {
			url = uri("https://oss.sonatype.org/content/repositories/snapshots/")
			content {
				includeGroup "com.badlogicgames.gdx"
			}
		}
	}

	tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
		kotlinOptions {
			jvmTarget = "25"
			freeCompilerArgs += "-progressive"
			freeCompilerArgs += "-opt-in=kotlin.RequiresOptIn"
			freeCompilerArgs += "-jvm-default=no-compatibility"
		}
	}

	tasks.withType(Test).configureEach {
		jvmArgs rootProject.ext.metaJava25JvmArgs
	}
}

eclipse.project.name = 'MetaRuntime' + '-parent'
